# VoxDose

./: LICENSE  README.md  analyze_wav_spl_f0.py  dosi.py  main_gui.py  paper.bib  paper.md  pyproject.toml  sp_cpps.py  sp_pitch_praat.py  sp_pitch_track_praat.py  spl_fast.py  spl_fast_c_th.py  splash.py  stima_livello.py
.github/workflows/: joss.yml
src/: voxdose_app.py
src/voxdose_core/: analyze_wav_spl_f0.py  dosi.py  sp_cpps.py  sp_pitch_praat.py  sp_pitch_track_praat.py  spl_fast.py  spl_fast_c_th.py  stima_livello.py
src/voxdose_gui/: paths.py  splash.py  voxdose_app.py
src/voxdose_reports/: __init__.py  analyze_plots.py  plots_pitch_block.py  plots_spl.py  plots_spl_block.py  plots_spl_dba.py
tests/: pytest.ini  test_analyze_plots.py  test_analyze_wav_spl_f0_core.py  test_dosi.py  test_gui_voxdose_app.py  test_plots_pitch_block.py  test_plots_spl.py  test_plots_spl_dba.py  test_sp_cpps.py  test_sp_cpps_helpers.py  test_sp_pitch_praat.py  test_sp_pitch_track_core.py  test_spl_fast_c_th.py  test_spl_fast_core.py  test_splash.py  test_stima_livello.py
